this is almart file updated

--- a/first.html
+++ b/first.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     this is about first page
+    <h1>This is new branch git feature</h1>
+    <h2>This is almart branch code</h2>
 </body>
 </html>
