--- a/second.html
+++ b/second.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     this is about second page
+    <h1>this is new branch feature</h1>
+    <h2>this is copy branch</h2>
+    <h>main branch(master> not effected</h>
+    <h>when we change and implement in this branch</h>
 </body>
 </html>
